# rtb-engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  start_container.sh
.devcontainer/: compose.devcontainer.yaml  devcontainer.json
bench/: CMakeLists.txt  request_pipeline_bench.cc
data/: sample_campaigns.csv
include/logs/: logs.h
include/rtb/: benchmark.h  campaign_store.h  config.h  constants.h  decision.h  engine_types.h  frame.h  handle_request.h  normalize.h  parse.h  response_builder.h  response_framing.h  retrieve.h  runtime_types.h  server.h  worker_runtime.h
proto/: CMakeLists.txt  rtb.proto
src/: CMakeLists.txt  benchmark.cc  campaign_store.cc  decision.cc  frame.cc  handle_request.cc  main.cc  normalize.cc  parse.cc  response_builder.cc  response_framing.cc  retrieve.cc  server.cc  worker_runtime.cc
tests/: CMakeLists.txt  benchmark_test.cc  campaign_store_test.cc  decision_test.cc  engine_types_smoke_test.cc  frame_test.cc  handle_request_test.cc  normalize_test.cc  parse_test.cc  response_builder_test.cc  response_framing_test.cc  retrieve_test.cc  server_test.cc  ssp_sim_benchmark_test.py
tools/: gen_ssp_proto.sh  install_ssp_deps.sh  requirements-ssp.txt  ssp_sim.py
